--- a/profiles/profiles.yml
+++ b/profiles/profiles.yml
@@ -9,5 +9,5 @@
       method: http
       schema: "main"
       host: "adb-3268197595939248.8.azuredatabricks.net"
-      http_path: "/sql/1.0/warehouses/40d695fc8389f556"
+      http_path: "sql/protocolv1/o/3268197595939248/1122-033446-iibqdsr"
       token: "dapi9ac69bfc13c2dd18062336a987549f18"
